feat(): support forms docs

--- a/bricks/form/src/form-item/FormItem.shadow.css
+++ b/bricks/form/src/form-item/FormItem.shadow.css
@@ -38,10 +38,11 @@
 
 .form-item-wrapper {
   flex: 1 1 0;
+  line-height: 32px;
 }
 
 .form-item-control {
-  line-height: 32px;
+  flex: 1;
 }
 
 .message {
