--- a/bricks/form/src/select/index.shadow.css
+++ b/bricks/form/src/select/index.shadow.css
@@ -190,6 +190,12 @@
   margin: 2px;
 }
 
+.select-item-option.disabled {
+  cursor: not-allowed;
+  color: var(--color-disabled-text);
+  background: var(--antd-input-disabled-bg);
+}
+
 .select-item-option:hover {
   background-color: var(--antd-select-item-active-bg);
 }
