--- a/bricks/form/src/dynamic-form-item/dynamic-form-item.shadow.css
+++ b/bricks/form/src/dynamic-form-item/dynamic-form-item.shadow.css
@@ -13,8 +13,8 @@
   height: 16px;
   border: 1px solid;
   border-radius: 50%;
-  line-height: 16px;
-  padding: 2px 2px 1px 2px;
+  line-height: 12px;
+  padding: 2px;
   margin-left: 8px;
   margin-top: 4px;
 }
@@ -22,4 +22,8 @@
 .dynamic-form > *:not(.remove-btn) {
   flex: 1;
   margin-right: 4px;
+}
+
+.add-btn {
+  width: 100%;
 }
