--- a/bricks/form/src/select/index.shadow.css
+++ b/bricks/form/src/select/index.shadow.css
@@ -7,6 +7,7 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
+  min-width: 100px;
 }
 
 /* select-input */
@@ -31,7 +32,7 @@
   flex: auto;
   flex-wrap: wrap;
   max-width: 100%;
-  padding-left: 4px;
+  padding-left: 12px;
 }
 
 .selected-item {
