feat(): show-dialog 支持 delete 类型
Closes NEXT_BUILDER-3248

--- a/bricks/form/src/input/input.shadow.css
+++ b/bricks/form/src/input/input.shadow.css
@@ -1,3 +1,11 @@
+:host {
+  display: inline-block;
+}
+
+:host([hidden]) {
+  display: none;
+}
+
 .input-wrapper {
   position: relative;
   display: inline-flex;
