--- a/bricks/form/src/upload/upload-image/styles.shadow.css
+++ b/bricks/form/src/upload/upload-image/styles.shadow.css
@@ -1,4 +1,3 @@
-/* Todo(nlicro): 颜色变量 */
 :host {
   display: inline-block;
 }
@@ -17,7 +16,12 @@ icons\.general-icon {
   line-height: 0.25em;
 }
 
-.image-list {
+.upload-wrapper {
+  line-height: initial;
+}
+
+.file-list {
+  margin-top: 12px;
   display: flex;
   flex-direction: column;
   gap: 7px;
@@ -27,7 +31,7 @@ icons\.general-icon {
   width: 686px;
 
   padding: 12px 20px;
-  border-radius: 6px;
+  border-radius: var(--larger-border-radius);
   cursor: pointer;
 }
 
@@ -50,8 +54,8 @@ icons\.general-icon {
 
 .file-name {
   font-size: 14px;
-  font-weight: 500;
-  color: #595959;
+  font-weight: var(--font-weight-500);
+  color: var(--text-color-default);
   line-height: 20px;
   margin-bottom: 4px;
 }
@@ -60,7 +64,7 @@ icons\.general-icon {
   width: 100%;
   height: 4px;
   background: #ffffff;
-  border-radius: 2px;
+  border-radius: var(--small-border-radius);
   margin: 8px 0;
 }
 
@@ -72,29 +76,27 @@ icons\.general-icon {
 
 .image-size {
   font-size: 12px;
-  font-weight: 400;
-  color: #595959;
+  color: var(--text-color-default);
   line-height: 18px;
 }
 
 .file-size {
   font-size: 12px;
-  font-weight: 500;
-  color: #bfbfbf;
-  line-height: 17px;
+  font-weight: var(--font-weight-500);
+  color: var(--text-color-disabled);
+  line-height: 18px;
 }
 
 .progress-info {
   font-size: 12px;
-  font-weight: 500;
-  color: #bfbfbf;
-  line-height: 17px;
+  font-weight: var(--font-weight-500);
+  color: var(--text-color-disabled);
+  line-height: 18px;
 }
 
 .error-info {
   font-size: 12px;
-  font-weight: 400;
-  color: #f24c25;
+  color: var(--color-error);
   line-height: 18px;
 }
 
@@ -111,13 +113,13 @@ icons\.general-icon {
 
 /* done */
 .image-item-done {
-  background: #f8f9fc;
-  border: 1px solid #eceef3;
+  background: var(--antd-upload-list-type-picture-bg);
+  border: 1px solid var(--antd-upload-list-type-picture-border-color);
 }
 
 .image-item-done:hover {
-  background: #f0f6ff;
-  border-color: #f0f6ff;
+  background: var(--palette-blue-1);
+  border-color: var(--palette-blue-1);
 }
 
 .image-item-done:hover .delete-icon {
@@ -125,22 +127,22 @@ icons\.general-icon {
 }
 
 .image-item-done .delete-icon {
-  color: #bfbfbf;
+  color: var(--text-color-disabled);
 }
 
 .image-item-done .delete-icon:hover {
-  color: #f24c25;
+  color: var(--color-error);
 }
 
 /* uploading */
 .image-item-uploading {
-  background: #f8f9fc;
-  border: 1px dashed #eceef3;
+  background: var(--antd-upload-list-type-picture-bg);
+  border: 1px dashed var(--antd-upload-list-type-picture-border-color);
 }
 
 .image-item-uploading:hover {
-  background: #ebf3fd;
-  border-color: #ebf3fd;
+  background: var(--antd-upload-list-type-picture-hover-bg);
+  border-color: var(--antd-upload-list-type-picture-hover-bg);
 }
 
 .image-item-uploading:hover .delete-icon {
@@ -148,20 +150,20 @@ icons\.general-icon {
 }
 
 .image-item-uploading .delete-icon {
-  color: #bfbfbf;
+  color: var(--text-color-disabled);
 }
 
 .image-item-uploading .delete-icon:hover {
-  color: #595959;
+  color: var(--text-color-default);
 }
 
 /* error */
 .image-item-error {
-  background: #ffede9;
-  border: 1px solid #f3917a;
+  background: var(--palette-red-1);
+  border: 1px solid var(--theme-orangered-border-color);
 }
 
 .image-item-error .delete-icon {
   opacity: 1;
-  color: #f24c25;
+  color: var(--color-error);
 }
