feat(): 构件样式调整 & dropdown actions 支持 hidden
Closes NEXT_BUILDER-3494

--- a/bricks/form/src/upload/upload-image/styles.shadow.css
+++ b/bricks/form/src/upload/upload-image/styles.shadow.css
@@ -1,5 +1,5 @@
 :host {
-  display: inline-block;
+  display: block;
 }
 
 :host([hidden]) {
@@ -28,8 +28,6 @@ icons\.general-icon {
 }
 
 .image-item {
-  width: 686px;
-
   padding: 12px 20px;
   border-radius: var(--larger-border-radius);
   cursor: pointer;
