--- a/bricks/basic/src/menu/menu.shadow.css
+++ b/bricks/basic/src/menu/menu.shadow.css
@@ -3,7 +3,7 @@
   position: relative;
   background: var(--antd-dropdown-menu-bg);
   border: 1px solid var(--antd-btn-default-border);
-  border-radius: 6px;
+  border-radius: var(--medius-border-radius);
   padding: 4px;
   overflow: auto;
 }
