--- a/bricks/data-view/src/title-text/styles.shadow.css
+++ b/bricks/data-view/src/title-text/styles.shadow.css
@@ -15,6 +15,7 @@
   letter-spacing: 17px;
   font-weight: var(--font-weight-500);
   font-size: 42px;
+  line-height: 42px;
 }
 .stroke-filter {
   position: absolute;
