feat(): update code

--- a/bricks/vs/src/code-editor/index.css
+++ b/bricks/vs/src/code-editor/index.css
@@ -1,7 +1,10 @@
-.highelight {
+.highlight {
   color: rgb(74 170 189) !important;
-  cursor: pointer;
   text-decoration: underline;
   font-weight: bold;
   font-style: oblique;
+}
+
+.pointer {
+  cursor: pointer;
 }
