--- a/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
+++ b/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
@@ -1793,6 +1793,7 @@ video {
   padding-right: 1rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  color: rgba(0, 0, 0, 0.87);
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 500;
