feat():新增大屏按钮构件 Closes MONITOR-6457

--- a/bricks/data-view/src/data-view-variables.shadow.css
+++ b/bricks/data-view/src/data-view-variables.shadow.css
@@ -161,4 +161,7 @@
   --paragraph-width-base: 1px;
 
   /* ============== 线框 End ============== */
+
+  /* 按钮 */
+  --button-text-color: #40d0db;
 }
