--- a/bricks/data-view/src/hi-tech-button/styles.shadow.css
+++ b/bricks/data-view/src/hi-tech-button/styles.shadow.css
@@ -17,28 +17,33 @@
 }
 
 .default {
-  width: 388px;
+  min-width: 388px;
   height: 128px;
+  background: url("../asset/images/normalButton.svg") no-repeat;
 }
 
 .parallelogram {
-  width: 430px;
+  min-width: 430px;
   height: 119px;
+  background: url("../asset/images/parallelogramButton.svg") no-repeat;
 }
 
 .stereoscopic {
-  width: 366px;
+  min-width: 366px;
   height: 150px;
+  background: url("../asset/images/stereoscopicButton.svg") no-repeat;
 }
 
 .shading {
-  width: 362px;
+  min-width: 362px;
   height: 119px;
+  background: url("../asset/images/shadingButton.svg") no-repeat;
 }
 
 .round {
   height: 116px;
-  width: 338px;
+  min-width: 338px;
+  background: url("../asset/images/roundButton.svg") no-repeat;
 }
 
 .buttonBg {
@@ -46,6 +51,9 @@
 }
 
 .button-container {
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0 30px;
   z-index: 0;
   display: flex;
   align-items: center;
