--- a/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
+++ b/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
@@ -1834,7 +1834,7 @@ video {
   --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   padding: 0.5rem 0.75rem;
-  background-image: url(../images//down-arrow.svg);
+  background-image: url(../images/down-arrow.svg);
   background-position: right 1rem center;
   background-repeat: no-repeat;
   background-size: 0.7rem 0.7rem;
