--- a/bricks/basic/src/tag/tag.shadow.css
+++ b/bricks/basic/src/tag/tag.shadow.css
@@ -18,6 +18,7 @@
 .tag-wrapper {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 2px 4px;
 }
 
@@ -170,7 +171,7 @@
 /* Color */
 
 .tag-icon {
-  vertical-align: middle;
+  line-height: 1em;
   font-size: 12px;
 }
 
