fix(): fix style (#297)
* fix(): fix style

--- a/bricks/basic/src/link/link.shadow.css
+++ b/bricks/basic/src/link/link.shadow.css
@@ -9,6 +9,8 @@ a {
 }
 
 .link {
+  display: flex;
+  align-items: center;
   color: var(--antd-btn-link-color);
 }
 
@@ -54,5 +56,5 @@ a {
 }
 
 eo-icon {
-  vertical-align: middle;
+  line-height: 1em;
 }
