--- a/bricks/containers/src/tab/tab-item/tab-item.shadow.css
+++ b/bricks/containers/src/tab/tab-item/tab-item.shadow.css
@@ -1,6 +1,7 @@
 .tab-item {
   position: relative;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   box-sizing: border-box;
   color: var(--antd-tabs-title-color);
   height: 100%;
@@ -13,7 +14,7 @@
 
 .tab-item-icon {
   font-size: 14px;
-  vertical-align: middle;
+  line-height: 1em;
   margin-right: 4px;
 }
 
