feat(): update classname

--- a/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
+++ b/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
@@ -1991,7 +1991,7 @@ pre[class*="language-"] {
 
 /* checkbox */
 
-.checkboxLi {
+.listItem {
   display: flex;
   align-items: flex-start;
   gap: 0.5rem;
